Fix p wrap for IE

--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -4,9 +4,11 @@
   display: flex;
   flex-wrap: wrap;
   padding: 2.4em 2em;
+  max-width: 100%;
 }
 
 .about-container {
+
   .summary {
     .card {
       margin-bottom: 3em;
